--- a/src/login/login.css
+++ b/src/login/login.css
@@ -107,6 +107,8 @@ div.kc-logo-text span {
     line-height: 1.2em;
     padding: 62px 10px 20px;
     white-space: normal;
+    color: #ff0000;
+    font-weight: bold;
 }
 
 #kc-content {
